# sk_custom_nodes

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  MEDIA_PREVIEW_IMPLEMENTATION.md  README.md  SOLUTION_SUMMARY.md  TESTING_FINAL_STRING_WIDGET.md  WORKFLOW_DEMO.md  __init__.py  package-lock.json  package.json  pyproject.toml  test_cache.py  test_error_handling.py  test_fix.py  test_integration.py  test_vhs_sk.py
.devcontainer/: devcontainer.json  postCreate.sh  run-comfy.sh
.github/: COPILOT_INSTRUCTIONS.md  copilot-instructions.md
.github/workflows/: ci.yml
VHS-SK/: README.md  __init__.py  batched_nodes.py  image_latent_nodes.py  load_images_nodes.py  load_video_nodes.py  logger.py  nodes.py  server.py  utils.py
VHS-SK/video_formats/: mp4.json  webm.json
VHS-SK/web/js/: vhs-sk.js
deprecated/: README.md  gemini_image_describe.py  gemini_video_describe.py
docs/: CACHING.md  CLOTHING_TEXT_EXCLUSION.md  CONFIGURABLE_OPTIONS_GUIDE.md  DECISIVENESS_IMPROVEMENTS.md  FINAL_STRING_WIDGET_FIX.md  JAVASCRIPT_ERROR_FIX.md  SEED_WIDGET_IMPLEMENTATION.md  SEED_WIDGET_RANDOMIZATION_FIX.md  WAN_VIDEO_UNIFIED_KSAMPLER.md  WIDGET_INVESTIGATION_AND_FIXES.md  WIDGET_STATE_PERSISTENCE_FIX.md  example_workflow.json  gemini-prompts.md
example_nodes/: example_node.py
src/gemini_custom_nodes/: nodes.py
ui/: package-lock.json  package.json  vite.config.js  vite.config.ts
ui-react_backup/: __init__.py
ui-react_backup/ui/: package-lock.json  package.json
ui-react_backup/ui/src/: App.css  App.tsx  index.css  main.tsx
ui-react_backup/ui/src/components/: GeminiVideoTab.css  GeminiVideoTab.tsx  VideoTrimmer.css  VideoTrimmer.tsx
ui-react_backup/ui/src/utils/: i18n.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/components/: GeminiVideoTab.tsx  VideoTrimmer.tsx
ui/src/utils/: i18n.ts
utils/: cache.py  helper_nodes.py  nodes.py  nodes.py.backup  nodes_clean.py
web/: eslint.config.js  package-lock.json  package.json
web/css/: gemini_widgets.css
web/js/: gemini_widgets.js  wan_unified_ksampler_widgets.js
web/js/gemini_video_trimmer/: App-Fn8q0mSV.js  App.css  main.css  main.js
web/tests/: README.md  package-lock.json  package.json
